# metadata-validator

./: .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  README.md  appveyor.yml  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: archive.py
scripts/travis/: metadata-validator.bintray.json
src/: main.cpp  main.rs  resource.rc  version.cpp.in  version.h
supply-chain/: audits.toml  config.toml
